# cnbirosmobile

cnbiros_applications/: CMakeLists.txt  package.xml
cnbiros_applications/launch/: robotino_forcefield_navigation.launch  robotino_rviz.launch
cnbiros_bci/: CMakeLists.txt  package.xml  rosdoc.yaml
cnbiros_bci/config/: tobi_interface_c.yaml  tobi_interface_d.yaml
cnbiros_bci/examples/: cnbiinterface.cpp  tobiic.cpp  tobiic_sender.cpp  tobiid.cpp
cnbiros_bci/extra/: cl_ticsender.cpp
cnbiros_bci/include/: BciInput.hpp  CnbiInterface.hpp  TiCProxy.hpp  TiDProxy.hpp  TobiIc.hpp  TobiIcTools.hpp  TobiId.hpp  TobiIdTools.hpp
cnbiros_bci/include/cnbiros_bci/: CnbiInterface.hpp  Control.hpp  TiCProxy.hpp  TiDProxy.hpp  TobiIcTools.hpp  TobiIdTools.hpp
cnbiros_bci/launch/: tobi_interface_c.launch  tobi_interface_d.launch  tobi_interfaces.launch
cnbiros_bci/msg/: .TobiIc.msg.swp  .TobiIcClass.msg.swp  .TobiIcClassifier.msg.swp  .TobiId.msg.swp  TiCClassifier.msg  TiCMessage.msg  TobiIc.msg  TobiIcClass.msg  TobiIcClassifier.msg  TobiId.msg
cnbiros_bci/src/: BciInput.cpp  CnbiInterface.cpp  Control.cpp  TiCProxy.cpp  TiDProxy.cpp  TobiIc.cpp  TobiIcTools.cpp  TobiId.cpp  TobiIdTools.cpp  bci_control_discrete.cpp  bci_node_base.cpp  cl_ticsender.cpp  tobi_interface_c.cpp  tobi_interface_d.cpp  tobiid_node_base.cpp
cnbiros_common/: CMakeLists.txt  NOT_rosdoc.yaml  package.xml
cnbiros_common/include/: KinectScan.hpp
cnbiros_common/launch/: cnbiros_kinectscan.launch
cnbiros_common/working/: KinectScan.cpp
cnbiros_core/: CMakeLists.txt  package.xml  rosdoc.yaml
cnbiros_core/include/: BciInput.hpp  Flags.hpp  ForceField.hpp  ForceFieldCtrl.hpp  Fusion.hpp  GridMapTool.hpp  Infrared.hpp  KinectScan.hpp  Motors.hpp  Navigation.hpp  NavigationCtrl.hpp  Odometry.hpp  Robot.hpp  RobotBase.hpp  RobotFactory.hpp  RosInterface.hpp  Sensor.hpp  SensorFactory.hpp  SensorGrid.hpp  SensorsFusion.hpp  TobiId.hpp
cnbiros_core/include/cnbiros_core/: ForceField.hpp  Fusion.hpp  Motor.hpp  Navigation.hpp  Odometry.hpp  RosInterface.hpp  Sensor.hpp  SensorGrid.hpp
cnbiros_core/launch/: cnbiros_bci.launch  cnbiros_forcefield.launch  cnbiros_fusion.launch  cnbiros_kinectscan.launch  cnbiros_tobiid.launch
cnbiros_core/src/: BciInput.cpp  ForceField.cpp  ForceFieldCtrl.cpp  Fusion.cpp  GridMapTool.cpp  Infrared.cpp  KinectScan.cpp  Motor.cpp  Motors.cpp  Navigation.cpp  NavigationCtrl.cpp  Odometry.cpp  Robot.cpp  RobotBase.cpp  RosInterface.cpp  Sensor.cpp  SensorFactory.cpp  SensorGrid.cpp  SensorsFusion.cpp  TobiId.cpp  bci_node_base.cpp  fusion_node_base.cpp  kinectscan_node_base.cpp  tobiid_node_base.cpp
cnbiros_core/test/: sensors.cpp  test_ros_interface.cpp
cnbiros_core/working/: CnbiInterface.cpp  CnbiInterface.hpp  GridMapTool.hpp  RobotFactory.cpp  Sensor.cpp  Sensor.hpp  SensorFactory.cpp  SensorFactory.hpp  SensorOld.hpp
cnbiros_forcefield/: CMakeLists.txt  package.xml
cnbiros_forcefield/include/cnbiros_forcefield/: Actors.hpp  ContinuousControl.hpp  DiscreteControl.hpp  Dynamics.hpp
cnbiros_forcefield/launch/: forcefield_actors.launch  forcefield_attractors.launch  forcefield_bci_continuous.launch  forcefield_bci_discrete.launch  forcefield_dynamics.launch  forcefield_repellors.launch  forcefield_stack.launch  robotino_forcefield_navigation.launch
cnbiros_forcefield/src/: Actors.cpp  ContinuousControl.cpp  DiscreteControl.cpp  Dynamics.cpp  forcefield_bci_continuous.cpp  forcefield_bci_discrete.cpp  forcefield_dynamics.cpp  forcefield_fusion_actors.cpp  forcefield_node_repellors.cpp
cnbiros_messages/: CMakeLists.txt  package.xml
cnbiros_messages/msg/: RobotOdometry.msg  RobotVelocity.msg  SensorMap.msg  TobiId.msg
cnbiros_messages/src/: cnbiros_msg.cpp
cnbiros_robotino/: CMakeLists.txt  package.xml  rosdoc.yaml
cnbiros_robotino/include/: Robotino.hpp  RobotinoBase.hpp  RobotinoCom.hpp  RobotinoInfrared.hpp  RobotinoMotors.hpp  RobotinoOdometry.hpp
cnbiros_robotino/include/cnbiros_robotino/: Communication.hpp  Infrared.hpp  Motor.hpp  Odometry.hpp  RobotinoMotors.hpp  RobotinoOdometry.hpp
cnbiros_robotino/launch/: kinectscan.launch  robotino_infrared.launch  robotino_minimal.launch  robotino_motor.launch  robotino_motors.launch  robotino_nokikect_rviz.launch  robotino_odometry.launch  robotino_rviz.launch  robotino_rviz_model.launch  robotino_rviz_old.launch  robotino_stack.launch
cnbiros_robotino/rviz/: grid_map.rviz
cnbiros_robotino/src/: Communication.cpp  Infrared.cpp  Motor.cpp  Odometry.cpp  Robotino.cpp  RobotinoBase.cpp  RobotinoCom.cpp  RobotinoFactory.cpp  RobotinoInfrared.cpp  RobotinoMotors.cpp  RobotinoOdometry.cpp  robotino_node.cpp  robotino_node_base.cpp  robotino_node_controller.cpp  robotino_node_fusion.cpp  robotino_node_infrared.cpp  robotino_node_main.cpp  robotino_node_motor.cpp  robotino_node_navigation.cpp  robotino_node_odometry.cpp
cnbiros_robotino/test/: robotinotest.cpp
cnbiros_robotino/working/: RobotinoFactory.hpp
cnbiros_services/: CMakeLists.txt  package.xml  rosdoc.yaml
cnbiros_services/src/: cnbiros_services.cpp
cnbiros_services/srv/: NavParameterSet.srv  Reset.srv  RosInterfaceState.srv  SetBaseVelocity.srv  SetOdometry.srv  SetTwist.srv
